--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "filament/spatie-laravel-settings-plugin": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-settings": "^3.4"
+        "spatie/laravel-settings": "^3.4",
+        "srmklive/paypal": "~3.0",
+        "stripe/stripe-php": "^16.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
