--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,13 @@
         "filament/spatie-laravel-settings-plugin": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.5",
+        "nnjeim/world": "^1.1",
+        "rinvex/countries": "^9.0",
         "spatie/laravel-settings": "^3.4",
         "srmklive/paypal": "~3.0",
-        "stripe/stripe-php": "^16.3"
+        "stripe/stripe-php": "^16.3",
+        "webpatser/laravel-countries": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
